# LanguageBiasAnalysis

./: .gitignore  README.md  logfile.txt  main.py  main_training.py  pyproject.toml  save_results.py
Report/txmm2025_paper_template/: report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.synctex(busy)  report.tex  sample-txmm.tex  sigprobib.bib
bias_analysis/: analogies.py  bias_identification.py  bias_plotting.py  bias_plotting_compare.py  shift_evaluation.py  we.py
data/: crawler.py  crawler_stories.py  data_loader.py  make_tables.py  metadata_crawler.py  preprocessor.py
data/tables/: table_adjectives.tex  table_animals.tex  table_professions.tex
data/terms/: adjectives.json  age_equalize_pairs.json  age_specific.json  animals.json  class_equalize_pairs.json  class_specific.json  positive_equalize_pairs.json  professions.json
data/tests/: book_3.txt
models/: fine_tuner.py
notebooks/: books_metadata.json  metadata_analysis.ipynb
scripts/: crawler.sh  run.sh
training/: fine_tuner.py
validation/: cosine_similarity_validation.py
