[project]
name = "folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.4.0",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
